--- a/src/View/Products/products.html.twig
+++ b/src/View/Products/products.html.twig
@@ -1,6 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'extbase.html.twig' %}
 
-{% block body %}
+{% block main %}
 <h1> Hier sollen die Produkte angezeigt werden </h1>
 <span> Ich brauche einen Button zu hinzufügen.</span>
 <button>Add</button>
