--- a/src/View/Login/login.html.twig
+++ b/src/View/Login/login.html.twig
@@ -1,18 +1,17 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-{{ parent() }} - Log in!{% endblock %}
+{{ parent() }} - Login
+{% endblock %}
 
-{% block body %}
-
-
+{% block main %}
 <form class="container" method="post" style="width: 22rem">
     <div class="row">
         <div class="col">
-            <h1>ERP - Login</h1>
+            <h1>Login</h1>
         </div>
     </div>
-        
+
     <div class="row">
         <div class="col">
             <label for="inputEmail">Email</label>
@@ -27,9 +26,8 @@
     </div>
     <div class="row">
         <div class="col">
-            <button class="btn btn-lg btn-primary" type="submit">Sign in</button>
+            <button class="btn btn-primary" type="submit">Sign in</button>
         </div>
     </div>
 </form>
-
 {% endblock %}
