--- a/src/View/base.html.twig
+++ b/src/View/base.html.twig
@@ -2,30 +2,59 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="wifth=device-widthm initial-scale=1">
+        <meta name="viewport" content="width=device-width initial-scale=1">
         <title>{% block title %}Bizniss{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         {% endblock %}
 
         {% block javascripts %}
 
         {% endblock %}
     </head>
-    <body>
-        <header class="row">
 
-        </header>
+ 
+    <body class="mx-3">
+        {% block header %}{% endblock %}
 
-        <navigation>
+        <div id="main">
+            {% block navigation %}{% endblock %}
 
-        </navigation>
-        {% if error %}
-            <div class="alert alert-danger">{{ error.message }}</div>
-        {% endif %}
+            {% if error %}
+                <div class="alert alert-danger">
+                    {% for message in error %}
+                        <li>{{ message }}</li>
+                    {% endfor %}
+                </div>
+            {% endif %}
 
-        {% block body %}{% endblock %}
+            <div id="main">
+                {% block main %}{% endblock %}
+            </div>
 
+        </div>
+
+        <footer></footer>
+
+        <div id="debuginfo" style="">
+            <p>URI: {{ server.REQUEST_URI }} </p>
+            <p>
+                <div>Route Info</div>
+                <pre> {{ dump(routeInfo) }} </pre>
+            </p>
+            <p>
+                <div>SESSION Variable</div>
+                <pre> {{ dump(session) }} </pre>
+            </p>
+            <p>
+                <div>POST Variable</div>
+                <pre> {{ dump(post) }} </pre>
+            </p>
+            <p>
+                <div>GET Variable</div>
+                <pre> {{ dump(get) }} </pre>
+            </p>
+        </div>
     </body>
 </html>
