--- a/src/View/base.html.twig
+++ b/src/View/base.html.twig
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1">
         <title>{% block title %}Bizniss{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link rel="icon" type="image/svg+xml" href="images/favicon.svg" sizes="any">
+        <link rel="icon" href="images/favicon.png" type="image/png">
         {% block stylesheets %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         {% endblock %}
@@ -18,7 +19,7 @@
     <body class="mx-3">
         {% block header %}{% endblock %}
 
-        <div id="main">
+        <div id="contentwrapper">
             {% block navigation %}{% endblock %}
 
             {% if error %}
