--- a/src/View/extbase.html.twig
+++ b/src/View/extbase.html.twig
@@ -48,6 +48,18 @@
           Tickets
         </a>
       </li>
+      <li>
+        <a href="/users" class="nav-link link-body-emphasis">
+          <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
+          Users
+        </a>
+      </li>
+      <li>
+        <a href="/pbx" class="nav-link link-body-emphasis">
+          <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
+          PBX
+        </a>
+      </li>
     </ul>
 </navigation>
 {% endblock %}
