add podman compose file and other stuff

--- a/src/View/Users/users.html.twig
+++ b/src/View/Users/users.html.twig
@@ -1,5 +1,48 @@
 {% extends 'extbase.html.twig' %}
 
+{% block head %}
+{{ parent() }}
+<link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+{% endblock %}
+
 {% block main %}
-<h1> Hier sollen die User angezeigt werden </h1>
+<h1>User Übersicht</h1>
+<table id="userTable" class="display">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Benutzername</th>
+            <th>E-Mail</th>
+            <th>Erstellt am</th>
+            <th>Aktualisiert am</th>
+        </tr>
+    </thead>
+    <tbody>
+        <!-- User-Daten werden hier dynamisch eingefügt -->
+    </tbody>
+</table>
+
+
+{% endblock %}
+
+{% block javascript %}
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+<script>
+    $(document).ready(function() {
+        $('#userTable').DataTable({
+            "processing": true,
+            "serverSide": true,
+            "ajax": "api/users",
+            "columns": [
+                { "data": "id" },
+                { "data": "username" },
+                { "data": "email" },
+                { "data": "created_at" },
+                { "data": "updated_at" }
+            ],
+            "dom": 'lfrtip' // Fügt die Filterelemente hinzu
+        });
+    });
+</script>
 {% endblock %}
