--- a/src/View/base.html.twig
+++ b/src/View/base.html.twig
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        {% block head %}
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1">
         <title>{% block title %}Bizniss{% endblock %}</title>
         <link rel="icon" type="image/svg+xml" href="images/favicon.svg" sizes="any">
         <link rel="icon" href="images/favicon.png" type="image/png">
         {% block stylesheets %}
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         {% endblock %}
-
-        {% block javascripts %}
 
         {% endblock %}
     </head>
@@ -19,24 +18,25 @@
     <body class="mx-3">
         {% block header %}{% endblock %}
 
-        <div id="contentwrapper">
+        <div id="contentwrapper" class="d-flex flex-row">
             {% block navigation %}{% endblock %}
 
-            {% if error %}
-                <div class="alert alert-danger">
-                    {% for message in error %}
-                        <li>{{ message }}</li>
-                    {% endfor %}
-                </div>
-            {% endif %}
+            
 
-            <div id="main">
+            <div id="main" class="col-md-9 px-3">
+                {% if error %}
+                    <div class="alert alert-danger p-3">
+                        {% for message in error %}
+                            <li>{{ message }}</li>
+                        {% endfor %}
+                    </div>
+                {% endif %}
                 {% block main %}{% endblock %}
             </div>
 
         </div>
 
-        <footer></footer>
+        <footer>by Paolo Compagnini</footer>
 
         <div id="debuginfo" style="">
             <p>URI: {{ server.REQUEST_URI }} </p>
@@ -57,5 +57,8 @@
                 <pre> {{ dump(get) }} </pre>
             </p>
         </div>
+
+        {% block javascript %}
+        {% endblock %}
     </body>
 </html>
