--- a/src/View/extbase.html.twig
+++ b/src/View/extbase.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block navigation %}
-<navigation class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px;">
+<navigation class="col-md-3" style="width: 280px;">
     <ul class="nav nav-pills flex-column mb-auto">
       <li class="nav-item">
         <a href="/" class="nav-link active" aria-current="page">
