--- a/src/View/extbase.html.twig
+++ b/src/View/extbase.html.twig
@@ -14,49 +14,49 @@
     <ul class="nav nav-pills flex-column mb-auto">
       <li class="nav-item">
         <a href="/" class="nav-link active" aria-current="page">
-          <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
+          <i class="bi-table pe-none me-2" width="16" height="16"></i>
           Dashboard
         </a>
       </li>
       <li>
         <a href="/orders" class="nav-link link-body-emphasis">
-          <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
+          <i class="bi-cart4 pe-none me-2" width="16" height="16"></i>
           Orders
         </a>
       </li>
       <li>
         <a href="/products" class="nav-link link-body-emphasis">
-          <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
+          <i class="bi-tools pe-none me-2" width="16" height="16"></i>
           Products
         </a>
       </li>
       <li>
         <a href="/customers" class="nav-link link-body-emphasis">
-          <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
+          <i class="bi-building-fill pe-none me-2" width="16" height="16"></i>
           Customers
         </a>
       </li>
       <li>
         <a href="/invoicing" class="nav-link link-body-emphasis">
-          <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
+          <i class="bi-cash-coin pe-none me-2" width="16" height="16"></i>
           Invoicing
         </a>
       </li>
       <li>
         <a href="/tickets" class="nav-link link-body-emphasis">
-          <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
+          <i class="bi-ticket pe-none me-2" width="16" height="16"></i>
           Tickets
         </a>
       </li>
       <li>
         <a href="/users" class="nav-link link-body-emphasis">
-          <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
+          <i class="bi-person-square pe-none me-2 width="16" height="16"></i>
           Users
         </a>
       </li>
       <li>
         <a href="/pbx" class="nav-link link-body-emphasis">
-          <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
+          <i class="bi-telephone pe-none me-2" width="16" height="16"></i>
           PBX
         </a>
       </li>
