--- a/src/View/base.html.twig
+++ b/src/View/base.html.twig
@@ -4,24 +4,26 @@
         {% block head %}
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1">
-        <title>{% block title %}Bizniss{% endblock %}</title>
+        <title>{% block title %}Biznizz{% endblock %}</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="icon" type="image/svg+xml" href="images/favicon.svg" sizes="any">
         <link rel="icon" href="images/favicon.png" type="image/png">
         {% block stylesheets %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         {% endblock %}
 
         {% endblock %}
     </head>
 
- 
+
     <body class="mx-3">
         {% block header %}{% endblock %}
 
         <div id="contentwrapper" class="d-flex flex-row">
             {% block navigation %}{% endblock %}
 
-            
+
 
             <div id="main" class="col-md-9 px-3">
                 {% if error %}
