dunno what to do

--- a/src/View/Users/users.html.twig
+++ b/src/View/Users/users.html.twig
@@ -30,7 +30,10 @@
         $('#userTable').DataTable({
             "processing": true,
             "serverSide": true,
-            "ajax": "api/users",
+            "ajax": {
+                url: 'api/users',
+                type: 'POST'
+            },
             "columns": [
                 { "data": "id" },
                 { "data": "mail" }
